compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unreachable_code_analysis_treats_anonymous_functions_independently_3.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 2020
expression: "\n        pub fn main() {\n            panic\n            let _ = \"warning here!\"\n            let _ = fn() {\n              panic\n              \"warning here!\"\n            }\n        }\n        "
snapshot_kind: text
---
----- SOURCE CODE

        pub fn main() {
            panic
            let _ = "warning here!"
            let _ = fn() {
              panic
              "warning here!"
            }
        }
        

----- WARNING
warning: Unreachable code
  ┌─ /src/warning/wrn.gleam:4:21
  │
4 │             let _ = "warning here!"
  │                     ^^^^^^^^^^^^^^^

This code is unreachable because it comes after a `panic`.

warning: Unreachable code
  ┌─ /src/warning/wrn.gleam:7:15
  │
7 │               "warning here!"
  │               ^^^^^^^^^^^^^^^

This code is unreachable because it comes after a `panic`.
