compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unreachable_code_for_panic_as_first_pipeline_item.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 1882
expression: "\n        pub fn wibble(_) { 1 }\n        pub fn main() {\n            panic |> wibble\n        }\n        "
snapshot_kind: text
---
----- SOURCE CODE

        pub fn wibble(_) { 1 }
        pub fn main() {
            panic |> wibble
        }
        

----- WARNING
warning: Unreachable code
  ┌─ /src/warning/wrn.gleam:4:22
  │
4 │             panic |> wibble
  │                      ^^^^^^

This code is unreachable because it comes after a `panic`.
