compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unreachable_function_argument_if_panic_is_argument.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 1839
expression: "\n        pub fn wibble(_, _) { 1 }\n        pub fn main() {\n          wibble(panic, 1)\n        }"
snapshot_kind: text
---
----- SOURCE CODE

        pub fn wibble(_, _) { 1 }
        pub fn main() {
          wibble(panic, 1)
        }

----- WARNING
warning: Unreachable code
  ┌─ /src/warning/wrn.gleam:4:25
  │
4 │           wibble(panic, 1)
  │                         ^

This argument is unreachable because the previous one always panics. Your
code will crash before reaching this point.
