compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unreachable_function_call_if_panic_is_last_argument_2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 1862
expression: "\n        pub fn wibble(_, _) { 1 }\n        pub fn main() {\n          wibble(1, panic)\n        }"
snapshot_kind: text
---
----- SOURCE CODE

        pub fn wibble(_, _) { 1 }
        pub fn main() {
          wibble(1, panic)
        }

----- WARNING
warning: Unreachable code
  ┌─ /src/warning/wrn.gleam:4:11
  │
4 │           wibble(1, panic)
  │           ^^^^^^

This function call is unreachable because its last argument always panics.
Your code will crash before reaching this point.
