compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unreachable_use_after_panic.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 1949
expression: "\n        pub fn wibble(_) { 1 }\n        pub fn main() {\n            panic\n            use <- wibble\n            1\n        }\n        "
snapshot_kind: text
---
----- SOURCE CODE

        pub fn wibble(_) { 1 }
        pub fn main() {
            panic
            use <- wibble
            1
        }
        

----- WARNING
warning: Unreachable code
  ┌─ /src/warning/wrn.gleam:5:20
  │
5 │             use <- wibble
  │                    ^^^^^^

This code is unreachable because it comes after a `panic`.
