compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unreachable_warning_2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 1759
expression: "pub fn main() {\n          let _ = panic\n          1\n        }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() {
          let _ = panic
          1
        }

----- WARNING
warning: Unreachable code
  ┌─ /src/warning/wrn.gleam:3:11
  │
3 │           1
  │           ^

This code is unreachable because it comes after a `panic`.
